--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     </div>
   </div>
 </div>
-    <script src="static/js/scripts.js"></script>
+    <script src="scripts.js"></script>
+<!--     <script src="static/js/scripts.js"></script> -->
   </body>
 </html>
