--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
     </div>
   </div>
 </div>
-    <script src="scripts.js"></script>
-<!--     <script src="static/js/scripts.js"></script> -->
+    <script src="static/js/script.js"></script>
   </body>
 </html>
