added status change

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <div class="div-19">
       <div class="div-20">
         <div class="div-21">Today tasks</div>
-        <div class="div-22">
-          <div class="div-23">All tasks</div>
-          <div class="div-24">In progress</div>
-          <div class="div-25">Completed</div>
+        <div class="task-statuses-bar">
+          <div class="status-active all">All tasks</div>
+          <div class="status progress">In progress</div>
+          <div class="status completed">Completed</div>
         </div>
       </div>
       <div class="tasks-list">
