--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="div-20">
         <div class="div-21">Today tasks</div>
         <div class="task-statuses-bar">
-          <div class="status-active all">All tasks</div>
+          <div class="status all status-active">All tasks</div>
           <div class="status progress">In progress</div>
           <div class="status completed">Completed</div>
         </div>
