--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="task-date-text">October 15, 2023</div>
               </div>
             </div>
-            <div class="task-status-completed">Done</div>
+            <div class="task-status completed">Done</div>
           </div>
         </div>
       </div>
