--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="task-date-text">October 15, 2023</div>
               </div>
             </div>
-            <div class="task-status-new">New task</div>
+            <div class="task-status new">New task</div>
           </div>
         </div>
         <div class="task">
@@ -110,7 +110,7 @@
                 <div class="task-date-text">October 15, 2023</div>
               </div>
             </div>
-            <div class="task-status-progress">In progress</div>
+            <div class="task-status progress">In progress</div>
           </div>
         </div>
         <div class="task">
