--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="div-3"></div>
     <div class="box">
       <div class="div-4">
-        <div class="div-5">Good morning Andre!</div>
+        <div class="user-name">Good morning Andre!</div>
         <div class="div-6">21 Sept, 2023</div>
       </div>
       <img
@@ -149,5 +149,11 @@
   </div>
 </div>
     <script src="static/js/script.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+      let tg = window.Telegram.WebApp;
+      let userName = document.getElementsByClassName('user-name');
+      userName.value = tg.initDataUnsafe.user.first_name
+    </script>
   </body>
 </html>
