--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
     <script>
       let tg = window.Telegram.WebApp;
       let userName = document.getElementsByClassName('user-name');
-      userName.value = tg.initDataUnsafe.user.first_name
+      // userName.value = tg.initDataUnsafe.user.first_name
+      userName.value = "123"
     </script>
   </body>
 </html>
