--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="div-3"></div>
     <div class="box">
       <div class="div-4">
-        <div class="user-name">Good morning Andre!</div>
+        <div class="user-name">Good morning Denis!</div>
         <div class="div-6">21 Sept, 2023</div>
       </div>
       <img
