--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="div-3"></div>
     <div class="box">
       <div class="div-4">
-        <div class="user-name">Good morning Denis!</div>
+        <div class="user-name">Hi Denis!</div>
         <div class="div-6">21 Sept, 2023</div>
       </div>
       <img
@@ -151,9 +151,9 @@
     <script src="static/js/script.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
-      let tg = window.Telegram.WebApp;
+      // let tg = window.Telegram.WebApp;
       document.addEventListener('DOMContentLoaded', () => {
-        document.getElementsByClassName('user-name').value = '123';
+        document.querySelector('.user-name').value = '123';
         // userName.value = tg.initDataUnsafe.user.first_name
       });
     </script>
