--- a/index.html
+++ b/index.html
@@ -151,10 +151,9 @@
     <script src="static/js/script.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
-      // let tg = window.Telegram.WebApp;
+      let tg = window.Telegram.WebApp;
       document.addEventListener('DOMContentLoaded', () => {
-        document.querySelector('.user-name').value = '123';
-        // userName.value = tg.initDataUnsafe.user.first_name
+        document.querySelector('.user-name').textContent = '123';
       });
     </script>
   </body>
