--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="div-3"></div>
     <div class="box">
       <div class="div-4">
-        <div class="user-name">Hi Denis!</div>
+        <div class="user-name">Hi</div>
         <div class="div-6">21 Sept, 2023</div>
       </div>
       <img
@@ -153,7 +153,7 @@
     <script>
       let tg = window.Telegram.WebApp;
       document.addEventListener('DOMContentLoaded', () => {
-        document.querySelector('.user-name').textContent = '123';
+        document.querySelector('.user-name').textContent = tg.initDataUnsafe.user.first_name;
       });
     </script>
   </body>
