--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
             </div>
             <span class="c-tg_hint line-height-[1rem]"><span>Free</span></span>
           </div></a
-        ><a
+        >
+        <!-- <a
           class="p-1 pr-4 inline-flex rounded-full bg-tg_bg max-w-34 my-0.5 overflow-hidden"
           href="https://t.me/UTasksBlogRU"
           ><img
@@ -216,10 +217,9 @@
               class="m-0 app-text-caption-regular whitespace-nowrap c-tg_hint"
               >Telegram канал</span
             >
-          </div></a
-        >
+          </div></a> -->
       </div>
-      <ul class="reset-list bg-tg_bg rounded-3">
+      <!-- <ul class="reset-list bg-tg_bg rounded-3">
         <li class="relative [&amp;:last-child_.item-name]:b-b-0">
           <button
             type="button"
@@ -261,7 +261,7 @@
             </div>
           </button>
         </li>
-      </ul>
+      </ul> -->
       <form
         class="relative bg-tg_bg rounded-3 h-11 min-h-11 focus:h-33 focus:shadow-card focus-within:h-33 focus-within:shadow-card [&amp;:focus-within>div>svg.plus]:w-0 [&amp;:focus-within>div>svg.plus]:mr-0 100-app-transition-height,box-shadow overflow-hidden shadow-none"
         id="create-task"
@@ -490,7 +490,7 @@
           data-id="g_all"
           data-index="0"
         >
-          <div class="w-full h-full rounded-3">
+          <div class="w-full rounded-3">
             <a
               link=""
               href="/utf//g_all?name=All&amp;type=Dynamic"
@@ -575,7 +575,7 @@
           data-id="g_inc"
           data-index="1"
         >
-          <div class="w-full h-full rounded-3">
+          <div class="w-full rounded-3">
             <a
               link=""
               href="/utf//g_inc?name=Incoming&amp;type=Dynamic"
@@ -656,7 +656,7 @@
           data-id="g_tod"
           data-index="2"
         >
-          <div class="w-full h-full rounded-3">
+          <div class="w-full rounded-3">
             <a
               link=""
               href="/utf//g_tod?name=Today&amp;type=Dynamic"
@@ -743,7 +743,7 @@
           data-id="g_tom"
           data-index="3"
         >
-          <div class="w-full h-full rounded-3">
+          <div class="w-full rounded-3">
             <a
               link=""
               href="/utf//g_tom?name=Tomorrow&amp;type=Dynamic"
@@ -824,7 +824,7 @@
           data-id="g_next7"
           data-index="4"
         >
-          <div class="w-full h-full rounded-3">
+          <div class="w-full rounded-3">
             <a
               link=""
               href="/utf//g_next7?name=Next+7+days&amp;type=Dynamic"
@@ -905,7 +905,7 @@
           data-id="g_compl"
           data-index="5"
         >
-          <div class="w-full h-full rounded-3">
+          <div class="w-full rounded-3">
             <a
               link=""
               href="/utf//g_compl?name=Completed&amp;type=Dynamic"
